HU04 historial de diagnosticos terminado